YARN-11796. Accept extra JDK 17 options in tests