@@ -751,6 +751,10 @@ static DataInputBuffer createFakeCredentials(Random r, int nTok)
         " userOption1 userOption2");
     List<String> javaOpts = localizer.getJavaOpts(conf);
 
+    if (Shell.isJavaVersionAtLeast(17)) {
+      assertTrue(javaOpts.remove("--add-exports=java.base/sun.net.dns=ALL-UNNAMED"));
+      assertTrue(javaOpts.remove("--add-exports=java.base/sun.net.util=ALL-UNNAMED"));
+    }
     assertEquals(4, javaOpts.size());
     assertTrue(javaOpts.get(0).equals("adminOption1"));
     assertTrue(javaOpts.get(1).equals("adminOption2"));
@@ -768,6 +772,10 @@ static DataInputBuffer createFakeCredentials(Random r, int nTok)
         "adminOption1 adminOption2");
     List<String> javaOpts = localizer.getJavaOpts(conf);
 
+    if (Shell.isJavaVersionAtLeast(17)) {
+      assertTrue(javaOpts.remove("--add-exports=java.base/sun.net.dns=ALL-UNNAMED"));
+      assertTrue(javaOpts.remove("--add-exports=java.base/sun.net.util=ALL-UNNAMED"));
+    }
     assertEquals(3, javaOpts.size());
     assertTrue(javaOpts.get(0).equals("adminOption1"));
     assertTrue(javaOpts.get(1).equals("adminOption2"));
@@ -784,6 +792,10 @@ static DataInputBuffer createFakeCredentials(Random r, int nTok)
         "userOption1 userOption2");
     List<String> javaOpts = localizer.getJavaOpts(conf);
 
+    if (Shell.isJavaVersionAtLeast(17)) {
+      assertTrue(javaOpts.remove("--add-exports=java.base/sun.net.dns=ALL-UNNAMED"));
+      assertTrue(javaOpts.remove("--add-exports=java.base/sun.net.util=ALL-UNNAMED"));
+    }
     assertEquals(2, javaOpts.size());
     assertTrue(javaOpts.get(0).equals("userOption1"));
     assertTrue(javaOpts.get(1).equals("userOption2"));
@@ -797,6 +809,10 @@ static DataInputBuffer createFakeCredentials(Random r, int nTok)
     Configuration conf = new Configuration();
     List<String> javaOpts = localizer.getJavaOpts(conf);
 
+    if (Shell.isJavaVersionAtLeast(17)) {
+      assertTrue(javaOpts.remove("--add-exports=java.base/sun.net.dns=ALL-UNNAMED"));
+      assertTrue(javaOpts.remove("--add-exports=java.base/sun.net.util=ALL-UNNAMED"));
+    }
     assertEquals(1, javaOpts.size());
     assertTrue(javaOpts.get(0).equals("-Xmx256m"));
   }
